<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/img_1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="465dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:layout_marginStart="0dp"
        android:text="@string/zero"
        android:textStyle="bold"
        android:textColor="@color/white"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="550dp">
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn7"
            android:textSize="25sp"
            android:textStyle="bold"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn8"
            android:textSize="25sp"
            android:textStyle="bold"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn9"
            android:textSize="25sp"
            android:textStyle="bold"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Ac"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/gray2"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="25sp"
            android:textStyle="bold"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/white"/>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn4"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn5"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn6"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modulus"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray2"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/into"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn2"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modulus"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray2"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BS"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/gray2"
                android:textColor="@color/white"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="25sp"
                android:textStyle="bold"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>